--- a/client/src/main/resources/fxml/calculadora/calculadora-ventana.fxml
+++ b/client/src/main/resources/fxml/calculadora/calculadora-ventana.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.server.controller.javafx.presupuesto.CalculadoraVentanaController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.client.controller.CalculadoraVentanaController">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <children>
