--- a/client/src/main/resources/fxml/serie/serie-list.fxml
+++ b/client/src/main/resources/fxml/serie/serie-list.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.server.controller.javafx.serie.SerieListController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.client.controller.SerieListController">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <children>
@@ -65,8 +65,8 @@
         <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
                 <Button fx:id="btnAgregar" mnemonicParsing="false" onAction="#handleAgregar" text="Agregar" />
-                <Button fx:id="btnEditar" disable="true" mnemonicParsing="false" onAction="#handleEditar" text="Editar" />
-                <Button fx:id="btnEliminar" disable="true" mnemonicParsing="false" onAction="#handleEliminar" text="Eliminar" />
+                <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#handleEditar" text="Editar" />
+                <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#handleEliminar" text="Eliminar" />
             </children>
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
