--- a/client/src/main/resources/fxml/cliente/cliente-list.fxml
+++ b/client/src/main/resources/fxml/cliente/cliente-list.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.client.controller.cliente.ClienteListController">
     <top>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Gestión de Clientes">
+                <Label styleClass="title" text="Gestión de Clientes">
                     <font>
                         <Font name="System Bold" size="16.0" />
                     </font>
@@ -23,8 +23,8 @@
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
                         <Label text="Buscar:" />
-                        <TextField fx:id="txtBusqueda" promptText="Nombre, CIF, etc..." HBox.hgrow="ALWAYS" />
-                        <Button mnemonicParsing="false" text="Buscar" />
+                        <TextField fx:id="txtBusqueda" promptText="Nombre, CIF, código..." HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false" onAction="#handleBuscar" text="Buscar" />
                     </children>
                 </HBox>
             </children>
@@ -37,22 +37,25 @@
         <TableView fx:id="tablaClientes" BorderPane.alignment="CENTER">
             <columns>
                 <TableColumn fx:id="colCodigo" prefWidth="100.0" text="Código" />
-                <TableColumn fx:id="colNombre" prefWidth="150.0" text="Nombre" />
-                <TableColumn fx:id="colTipo" prefWidth="100.0" text="Tipo" />
-                <TableColumn fx:id="colTelefono" prefWidth="120.0" text="Teléfono" />
+                <TableColumn fx:id="colNombre" prefWidth="250.0" text="Nombre/Razón Social" />
+                <TableColumn fx:id="colTipo" prefWidth="120.0" text="Tipo" />
+                <TableColumn fx:id="colTelefono" prefWidth="150.0" text="Teléfono" />
                 <TableColumn fx:id="colEmail" prefWidth="200.0" text="Email" />
             </columns>
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
+            <placeholder>
+                <Label text="No hay clientes para mostrar" />
+            </placeholder>
         </TableView>
     </center>
     <bottom>
         <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" text="Nuevo Cliente" />
-                <Button mnemonicParsing="false" text="Editar" />
-                <Button mnemonicParsing="false" text="Eliminar" />
+                <Button mnemonicParsing="false" onAction="#handleNuevoCliente" text="Nuevo Cliente" />
+                <Button mnemonicParsing="false" onAction="#handleEditar" text="Editar" />
+                <Button mnemonicParsing="false" onAction="#handleEliminar" text="Eliminar" />
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
