--- a/client/src/main/resources/fxml/presupuesto/presupuesto-list.fxml
+++ b/client/src/main/resources/fxml/presupuesto/presupuesto-list.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.client.controller.presupuesto.PresupuestoListController">
     <top>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Gestión de Presupuestos">
+                <Label styleClass="title" text="Gestión de Presupuestos">
                     <font>
                         <Font name="System Bold" size="16.0" />
                     </font>
@@ -27,12 +27,16 @@
                         <Label text="Cliente:" />
                         <TextField fx:id="txtCliente" promptText="Nombre o código..." HBox.hgrow="ALWAYS" />
                         <Label text="Estado:" />
-                        <ComboBox fx:id="cmbEstado" prefWidth="150.0" />
+                        <ComboBox fx:id="cmbEstado" prefWidth="150.0" promptText="Todos" />
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                    <children>
                         <Label text="Desde:" />
                         <DatePicker fx:id="dpDesde" />
                         <Label text="Hasta:" />
                         <DatePicker fx:id="dpHasta" />
-                        <Button mnemonicParsing="false" text="Buscar" />
+                        <Button mnemonicParsing="false" onAction="#handleBuscar" text="Buscar" />
                     </children>
                 </HBox>
             </children>
@@ -44,24 +48,27 @@
     <center>
         <TableView fx:id="tablaPresupuestos" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="colNumero" prefWidth="100.0" text="Número" />
-                <TableColumn fx:id="colFecha" prefWidth="100.0" text="Fecha" />
-                <TableColumn fx:id="colCliente" prefWidth="200.0" text="Cliente" />
-                <TableColumn fx:id="colTotal" prefWidth="120.0" text="Total" />
-                <TableColumn fx:id="colEstado" prefWidth="100.0" text="Estado" />
+                <TableColumn fx:id="colNumero" prefWidth="120.0" text="Número" />
+                <TableColumn fx:id="colFecha" prefWidth="120.0" text="Fecha" />
+                <TableColumn fx:id="colCliente" prefWidth="250.0" text="Cliente" />
+                <TableColumn fx:id="colTotal" prefWidth="150.0" text="Total" />
+                <TableColumn fx:id="colEstado" prefWidth="150.0" text="Estado" />
             </columns>
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
+            <placeholder>
+                <Label text="No hay presupuestos para mostrar" />
+            </placeholder>
         </TableView>
     </center>
     <bottom>
         <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" text="Nuevo Presupuesto" />
-                <Button mnemonicParsing="false" text="Editar" />
-                <Button mnemonicParsing="false" text="Ver Detalles" />
-                <Button mnemonicParsing="false" text="Generar Trabajo" />
+                <Button fx:id="btnNuevoPresupuesto" mnemonicParsing="false" onAction="#handleNuevoPresupuesto" text="Nuevo Presupuesto" />
+                <Button fx:id="btnEditar" disable="true" mnemonicParsing="false" onAction="#handleEditar" text="Editar" />
+                <Button fx:id="btnVerDetalles" disable="true" mnemonicParsing="false" onAction="#handleVerDetalles" text="Ver Detalles" />
+                <Button fx:id="btnGenerarTrabajo" disable="true" mnemonicParsing="false" onAction="#handleGenerarTrabajo" text="Generar Trabajo" />
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
