--- a/client/src/main/resources/fxml/trabajo/trabajo-list.fxml
+++ b/client/src/main/resources/fxml/trabajo/trabajo-list.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gestiontaller.client.controller.trabajo.TrabajoListController">
     <top>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Gestión de Trabajos">
+                <Label styleClass="title" text="Gestión de Trabajos">
                     <font>
                         <Font name="System Bold" size="16.0" />
                     </font>
@@ -27,12 +27,16 @@
                         <Label text="Cliente:" />
                         <TextField fx:id="txtCliente" promptText="Nombre o código..." HBox.hgrow="ALWAYS" />
                         <Label text="Estado:" />
-                        <ComboBox fx:id="cmbEstado" prefWidth="150.0" />
+                        <ComboBox fx:id="cmbEstado" prefWidth="150.0" promptText="Todos" />
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                    <children>
                         <Label text="Desde:" />
                         <DatePicker fx:id="dpDesde" />
                         <Label text="Hasta:" />
                         <DatePicker fx:id="dpHasta" />
-                        <Button mnemonicParsing="false" text="Buscar" />
+                        <Button mnemonicParsing="false" onAction="#handleBuscar" text="Buscar" />
                     </children>
                 </HBox>
             </children>
@@ -45,7 +49,7 @@
         <TableView fx:id="tablaTrabajos" BorderPane.alignment="CENTER">
             <columns>
                 <TableColumn fx:id="colCodigo" prefWidth="100.0" text="Código" />
-                <TableColumn fx:id="colFecha" prefWidth="100.0" text="Fecha" />
+                <TableColumn fx:id="colFecha" prefWidth="120.0" text="Fecha" />
                 <TableColumn fx:id="colCliente" prefWidth="200.0" text="Cliente" />
                 <TableColumn fx:id="colEstado" prefWidth="120.0" text="Estado" />
                 <TableColumn fx:id="colPrioridad" prefWidth="100.0" text="Prioridad" />
@@ -54,15 +58,18 @@
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
+            <placeholder>
+                <Label text="No hay trabajos para mostrar" />
+            </placeholder>
         </TableView>
     </center>
     <bottom>
         <HBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" text="Nuevo Trabajo" />
-                <Button mnemonicParsing="false" text="Editar" />
-                <Button mnemonicParsing="false" text="Cambiar Estado" />
-                <Button mnemonicParsing="false" text="Ver Detalles" />
+                <Button fx:id="btnNuevoTrabajo" mnemonicParsing="false" onAction="#handleNuevoTrabajo" text="Nuevo Trabajo" />
+                <Button fx:id="btnEditar" disable="true" mnemonicParsing="false" onAction="#handleEditar" text="Editar" />
+                <Button fx:id="btnCambiarEstado" disable="true" mnemonicParsing="false" onAction="#handleCambiarEstado" text="Cambiar Estado" />
+                <Button fx:id="btnVerDetalles" disable="true" mnemonicParsing="false" onAction="#handleVerDetalles" text="Ver Detalles" />
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
